--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
     <title>Animal Shelter</title>
   </head>
   <body>
+    <div class="profile">
+
     <h2>sherly</h2>
     <img src="images/Sherly.jpg" alt="sherly">
     <p>Sherly is a pet rock</p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis urna id volutpat lacus laoreet non. Orci ac auctor augue mauris augue neque gravida in. Massa vitae tortor condimentum lacinia quis. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Felis imperdiet proin fermentum leo. Natoque penatibus et magnis dis parturient montes nascetur. Porttitor leo a diam sollicitudin tempor id eu nisl. Varius vel pharetra vel turpis nunc. Feugiat nisl pretium fusce id velit ut. At imperdiet dui accumsan sit amet nulla facilisi. Auctor eu augue ut lectus. Morbi tristique senectus et netus. Dui nunc mattis enim ut tellus.
     </p>
+    </div>
+    <div class="profile">
+
     <h2>Oscar</h2>
     <img src="images/Oscar.jpg" alt="oscar">
     <p>Oscar was rescued from a burning building</p>
     <p>
     Justo laoreet sit amet cursus sit amet dictum. Vestibulum lectus mauris ultrices eros in. Pellentesque habitant morbi tristique senectus et netus. Velit scelerisque in dictum non consectetur a erat nam at. Sed tempus urna et pharetra pharetra. Nibh venenatis cras sed felis eget velit. Augue mauris augue neque gravida in fermentum et. Nibh tellus molestie nunc non blandit massa enim nec dui. Fames ac turpis egestas maecenas pharetra convallis posuere. Purus sit amet luctus venenatis lectus magna fringilla. Aliquam vestibulum morbi blandit cursus risus at ultrices. Enim lobortis scelerisque fermentum dui faucibus. A pellentesque sit amet porttitor eget dolor morbi. In hac habitasse platea dictumst vestibulum rhoncus est. Turpis egestas maecenas pharetra convallis posuere morbi. Metus aliquam eleifend mi in nulla posuere sollicitudin.
     </p>
+  </div>
+  <div class="profile">
+
     <h2>Charlie</h2>
     <img src="images/charlie.jpg" alt="charlie">
     <p>Charlie was found rumaging through garbage in a back alley in the city.</p>
     <p>Condimentum vitae sapien pellentesque habitant. Consequat ac felis donec et odio pellentesque diam volutpat. Ullamcorper sit amet risus nullam eget. Cras semper auctor neque vitae tempus. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Est ultricies integer quis auctor elit sed vulputate mi sit. Est ante in nibh mauris cursus mattis molestie a. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. At varius vel pharetra vel turpis nunc. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas. Tellus elementum sagittis vitae et leo. Sit amet mauris commodo quis imperdiet massa tincidunt. A diam sollicitudin tempor id eu nisl. Nibh nisl condimentum id venenatis a condimentum. Vitae aliquet nec ullamcorper sit amet. In metus vulputate eu scelerisque felis imperdiet proin fermentum.
     </p>
+  </div>
+  <div class="profile">
+
     <h2>Webster</h2>
     <img src="images/webster.jpg" alt="webster">
     <p>Webster is a Spider whome no one accepted.</p>
     <p>Volutpat sed cras ornare arcu dui vivamus arcu. At lectus urna duis convallis convallis tellus id interdum velit. Arcu dictum varius duis at consectetur lorem donec massa sapien. Amet consectetur adipiscing elit duis. Lobortis mattis aliquam faucibus purus in. Diam vulputate ut pharetra sit amet. Eu feugiat pretium nibh ipsum consequat nisl vel. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Adipiscing tristique risus nec feugiat in fermentum. Vitae tortor condimentum lacinia quis. Mauris augue neque gravida in fermentum. Leo integer malesuada nunc vel risus commodo. Faucibus a pellentesque sit amet porttitor eget dolor morbi non.
     </p>
+  </div>
 
   </body>
 </html>
